[metadata]
name = pnu-vuxml
description = FreeBSD VuXML library and query tool
long_description = file: README.md
long_description_content_type = text/markdown
version = 1.0.1
license = BSD 3-Clause License
license_files = License
author = Hubert Tournier
author_email = hubert.tournier@gmail.com
url = https://github.com/HubTou/vuxml/
project_urls =
    Bug Tracker = https://github.com/HubTou/vuxml/issues
keywords = pnu-project, freebsd, security
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: POSIX :: BSD :: FreeBSD
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pnu-libpnu
    colorama
    defusedxml
    html2text
    packaging

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    vuxml = vuxml:main

[options.data_files]
man/man1 =
    man/vuxml.1.gz
man/man3 =
    man/vuxml.3.gz

